# retro-decode

./: .gitignore  CLAUDE.md  Cargo.toml  LF2_COMPRESSION_ANALYSIS.md  README.ja.md  README.md  TECHNICAL_INSIGHTS.md  WEB_VISUALIZER_GUIDE.md  optimization_checkpoint.json  │
.claude/: CLAUDE.md  DEVELOPMENT_GUIDE.md  LF2_COMPRESSION_ANALYSIS.md  PDT_KNOWLEDGE.md  PROJECT_ROADMAP.md  REFERENCES.md  TECHNICAL_INSIGHTS.md  settings.local.json
browser-extension/: README.md  content-script.js  demo.html  manifest.json
docs/: ai-route-2026-04-27-v3-to-v8.md  breakthrough-findings-2025-07-07.md  critical-insights-2025-07-04.md  encoder-acquisition-investigation.md  final-breakthrough-analysis-2025-07-07.md  first-diff-analysis.md  historic-breakthrough-2025-07-07.md  investigation-timeline.md  lf2-encoding-challenges.md  lf2-landscape-snapshot.md  ml-lessons-learned.md  next-session-strategy.md  okumura-limit-analysis.md  okumura-port-result.md  project-completion-summary-2025-07-07.md  shocking-discovery-2025-07-07.md  ultimate-achievement-2025-07-07.md
examples/: absolute_perfect_binary_match.rs  absolute_zero_diff_breakthrough.rs  algorithm_hypothesis_test.rs  analyze_original_compression.rs  balanced_fine_tuning.rs  binary_level_analysis.rs  binary_perfect_replication.rs  brute_force_parameter_search.rs  classic_conservative_search.rs  complete_parameter_discovery.rs  comprehensive_encoder_benchmark.rs  compression_focused_search.rs  compression_summary.rs  conservative_perfect_lzss.rs  debug_differences.rs  decision_by_decision_analysis.rs  deep_binary_analysis.rs  deep_search_optimization.rs  diff_analysis_tool.rs  enhanced_statistical_mimic.rs  extreme_22200_breakthrough.rs  extreme_compression_lzss.rs  extreme_compression_test.rs  final_1156_elimination.rs  final_213_perfect_assault.rs  final_59diff_elimination.rs  final_641_diff_elimination.rs  final_81_diff_attack.rs  final_parameter_hunt.rs  final_perfect_lzss.rs  final_precision_analysis.rs  final_target_assault.rs  fixed_decode_lzss.rs  fixed_lzss_implementation.rs  generate_test_assets.rs  human_realistic_parameters.rs  hybrid_optimal_lzss.rs  lf2_deep_analysis.rs  lf2_precise_analysis.rs  lf2_reverse_engineer.rs  (+40 more)
ml_pipeline/: analyze_chosen_dist.py  analyze_hopeless_bulk.py  batch_all_files.py  batch_failed_files.py  batch_failed_v11.py  encode_to_lf2.py  encode_with_model.py  exact_round_trip.py  hybrid_encoder.py  inspect_c0101_model.py  learn_tie_rule.py  pyproject.toml  results_v8_1500rounds.csv  sample_per_file.py  subsample_tie_dataset.py  train_global_model.py  train_per_file_overfit.py  tune_c0205.py
python/: decision_rules.json  feature_importance.json  lzss_decision_model.pth  ml_lzss_analyzer.py  model_analysis.json  model_interpreter.py  perfect_decision_analysis.json  perfect_decision_analyzer.py  pyproject.toml  rust_implementation_hints.rs
src/: lib.rs  main.rs  wasm.rs
test_assets/: README.md
tests/: first_diff_test.rs  integration_tests.rs  okumura_regression.rs
web/: README.md  index.html  package-lock.json  package.json  vite.config.js
(+63 files in other folders)
