[project]
name = "retro-decode-py"
version = "0.1.0"
description = "Python implementation of retro game decoders/encoders with ML"
authors = [
    {name = "RetroDecode Project"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pathlib2>=2.3.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
